--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
   },
   "dependencies": {
     "@google/genai": "latest",
+    "@tailwindcss/postcss": "^4.1.11",
+    "autoprefixer": "^10.4.21",
+    "axios": "^1.10.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
+    "express": "^5.1.0",
+    "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
