--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,9 @@
     "start": "node geminiProxy.cjs"
   },
   "dependencies": {
-    "express": "^5.1.0",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.0"
+    "dotenv": "^17.2.0",
+    "express": "^4.18.2"
   }
 }
