--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
+    "@playwright/test": "^1.54.2",
     "@types/node": "^22.14.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "playwright": "^1.54.2",
     "typescript": "~5.7.2",
     "vite": "^6.2.0"
   }
