--- a/package.json
+++ b/package.json
@@ -10,24 +10,25 @@
   },
   "dependencies": {
     "@google/genai": "latest",
-    "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
+    "daisyui": "^5.0.50",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "node-fetch": "^3.3.2",
-    "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-markdown": "^10.1.0",
-    "tailwindcss": "^3.4.17"
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.54.2",
     "@types/node": "^22.14.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "autoprefixer": "^10.4.21",
     "playwright": "^1.54.2",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "typescript": "~5.7.2",
     "vite": "^6.2.0"
   }
