--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
 .github/
-.vscode/
 
 venv/
 **/venv/
-
-**/node_modules/
 
 **/.env
 
@@ -12,3 +9,28 @@ dist/
 
 # personal reference files from past projects
 /reference 
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+**/node_modules/
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
