--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trusty-digital-safety-course",
+  "name": "trusty-digital-guardian",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,27 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "latest",
-    "axios": "^1.10.0",
-    "cors": "^2.8.5",
-    "daisyui": "^5.0.50",
-    "dotenv": "^17.2.0",
-    "express": "^5.1.0",
-    "node-fetch": "^3.3.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-markdown": "^10.1.0"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "@google/genai": "^1.13.0",
+    "react-router-dom": "^7.8.0",
+    "lucide-react": "^0.537.0",
+    "framer-motion": "^12.23.12"
   },
   "devDependencies": {
-    "@playwright/test": "^1.54.2",
     "@types/node": "^22.14.0",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "autoprefixer": "^10.4.21",
-    "playwright": "^1.54.2",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
-    "typescript": "~5.7.2",
+    "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
 }
