--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,3 @@
-.github/
-
-venv/
-**/venv/
-
-**/.env
-
-dist/
-
-# personal reference files from past projects
-/reference 
-
 # Logs
 logs
 *.log
@@ -19,13 +7,14 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-**/node_modules/
+node_modules
 dist
 dist-ssr
 *.local
 
 # Editor directories and files
 .vscode/*
+.github/* 
 !.vscode/extensions.json
 .idea
 .DS_Store
