--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview",
-  "start": "vite preview"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "start": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.13.0",
+    "cors": "^2.8.5",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.537.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "@google/genai": "^1.13.0",
-    "react-router-dom": "^7.8.0",
-    "lucide-react": "^0.537.0",
-    "framer-motion": "^12.23.12"
+    "react-router-dom": "^7.8.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
