--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.13.0",
+    "@tippyjs/react": "^4.2.6",
     "cors": "^2.8.5",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.537.0",
