--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google/genai": "^1.13.0",
     "@tippyjs/react": "^4.2.6",
     "cors": "^2.8.5",
+    "daisyui": "^5.0.50",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.537.0",
     "react": "^19.1.1",
