--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google/genai": "^1.13.0",
     "@tippyjs/react": "^4.2.6",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "cors": "^2.8.5",
     "daisyui": "^5.0.50",
     "framer-motion": "^12.23.12",
