--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
-    "react-router-dom": "^7.8.0"
+    "react-router-dom": "^7.8.0",
+    "vercel": "^48.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
