--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.8.0",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "vercel": "^48.2.0"
   },
   "devDependencies": {
